# KRAI

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DATABASE_ARCHITECTURE.md  DATABASE_SCHEMA.md  DB_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  IMAGE_PIPELINE_ANALYSIS.md  IMAGE_PIPELINE_CODE_SECTIONS.md  MASTER-TODO.md  PHASE3_PLAN.md  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: backend-tests.yml  lint.yml
.windsurf/rules/: project-rules.md
backend/: ERROR_CODE_FIXES.md  PROCESSING_FLOW_ANALYSIS.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_CONTENT_MANAGEMENT.md  SOLUTION_EXTRACTION_FORMATS.md  __init__.py  auth_implementation_plan.md  constraints.txt  error_code_test_report.json  main.py  main1.py  requirements.txt
backend/api/: README.md  README_ADAPTER_USAGE.md  __init__.py  agent_api.py  agent_scope.py  app.py  check_error_code_in_db_postgresql.py  content_management_api.py  defect_detection_api.py  document_api.py  features_api.py  gpu_utils.py  manufacturer_api.py  monitoring_api.py  openai_compatible_api.py  product_api.py  progressive_search.py  search_api.py  test_agent.py  test_agent_improved.py  test_api_simple.py  test_error_C9402_postgresql.py  test_new_upload.py  test_part_41X5345_postgresql.py  test_parts_extraction.py  test_semantic_C9402_postgresql.py  test_stage_tracking_api.py  test_tools_directly_postgresql.py  validation_error_codes.py  websocket.py
backend/config/: DOCUMENT_VERSION_PATTERNS.md  __init__.py  ai_config.py  auth_config.py  bulletin_analysis_report.md  context_extraction_config.py  document_update_strategies.md  error_code_patterns.json  intelligent_model_strategy.md  json_version_config_summary.md  model_placeholder_patterns.json  oem_mappings.py  parts_patterns.json  security_config.py  tesseract_config.py  version_extraction_results.md
backend/configs/: canon.yaml  hp_inc.yaml  konica_minolta.yaml  kyocera.yaml  lexmark.yaml  ricoh.yaml  xerox.yaml
backend/core/: __init__.py  base_processor.py  data_models.py  idempotency.py  retry_engine.py  types.py
backend/database/: supabase_functions.sql
backend/docs/: AUTHENTICATION.md  ERROR_CODE_PATTERNS.md
backend/models/: __init__.py  (+12 more)
data/: lexmark_videos_2026-02-18.json
database/: CHANGELOG.md  README.md
docs/: AGENT_SYSTEM_MESSAGE_V2.2.md  AGENT_SYSTEM_MESSAGE_V2.3.md  AGENT_SYSTEM_MESSAGE_V2.4_FINAL.md  ARCHITECTURE.md  CUDA_GPU_SETUP.md  DOCKER_SETUP_GUIDE.md  DOCUMENTATION_CLEANUP_SUMMARY.md  ENVIRONMENT_VARIABLES_REFERENCE.md  ENVIRONMENT_VARIABLES_REFERENCE_NEW.md  ERROR_CODE_SYSTEM.md  ERROR_HANDLING_RETRY_RULES.md  FOLIANT_SYSTEM.md  IDE_RULES_RESTORED.md  LARAVEL_DASHBOARD_INTEGRATION.md  MIGRATION_GUIDE_CLOUD_TO_LOCAL.md  N8N_AGENT_OPTIMIZATIONS.md  OEM_CROSS_SEARCH.md  OVERNIGHT_PROCESSING_GUIDE.md  PASSWORT_WECHSEL.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE6_API_REFERENCE.md  PHASE6_DEPLOYMENT_GUIDE.md  PHASE_4_MULTIMODAL_EMBEDDINGS.md  PHASE_5_CONTEXT_EXTRACTION.md  PHASE_6_ADVANCED_FEATURES.md  PM_MASTER_PLAN.md  PROCESSOR_V2_REQUIREMENTS.md  PRODUCT_RESEARCH.md  PROJECT_RULES_COMPLETE.md  Projektplan.md  QUICK_START_PHASES_1_6.md  REFACTOR_BACKLOG.md  SUPABASE_TO_POSTGRESQL_MIGRATION.md  TEST_SETUP.md  VIDEO_SYSTEM.md  retry_engine_integration.md
examples/: README.md  example_pipeline_usage.py  firecrawl_basic_scraping.py  firecrawl_link_enrichment.py  firecrawl_manufacturer_crawler.py  firecrawl_site_crawling.py  firecrawl_structured_extraction.py
laravel-admin/: package-lock.json
schema/: .schema-hash  README.md  column-traps.yaml  krai.dbml
scripts/: _env.py  add_hp_inc_manufacturer.py  anonymize_pii.py  apply_fix.py  apply_migration_009_stage_metrics.py  apply_migration_011_alerts_table.py  apply_migration_019_processing_queue_stage_column.py  apply_migration_020_processing_queue_extended_columns.py  apply_migration_022_chunks_fingerprint_index.py  auto_processor.py  backfill_image_error_codes.py  backfill_solution_levels.py  check_and_fix_links.py  check_env.py  check_lexmark_import.py  check_lexmark_tracks.py  check_manufacturers.py  check_products_db.py  check_svg_syntax.py  check_syntax.py  convert_minio_images_to_jpeg.py  create_staging_snapshot.sh  delete_document_data.py  diagnose_lexmark_videos.py  docker-clean-setup.ps1  docker-clean-setup.sh  docker-health-check.ps1  docker-health-check.sh  docker-integration-tests.ps1  docker-integration-tests.sh  embed_lexmark_chunks.py  enrich_video_metadata.py  evaluate_rag.py  fix_indentation.py  fix_lexmark_model_names.py  fix_lexmark_series_and_platform.py  fix_lexmark_video_series.py  fix_vision_crashes.bat  full-docker-setup.ps1  full-docker-setup.sh  (+73 more)
tasks/: pm-sprint-01-datenfundament.md  pm-sprint-02-modellgrundlagen.md
test_results/: production_test_20260213_172656.json  production_test_ERROR_20260212_091623.json  production_test_ERROR_20260212_092331.json  production_test_ERROR_20260212_093100.json  production_test_ERROR_20260212_094111.json  production_test_ERROR_20260212_094451.json  production_test_ERROR_20260212_094805.json  production_test_ERROR_20260212_161343.json  production_test_ERROR_20260212_180438.json  production_test_ERROR_20260212_180443.json  production_test_ERROR_20260212_180532.json  production_test_ERROR_20260212_193451.json  production_test_ERROR_20260212_194706.json  production_test_ERROR_20260212_200414.json  production_test_ERROR_20260213_001315.json  production_test_ERROR_20260213_014904.json  quality_check_multivendor_20260214_013146.json  quality_check_multivendor_20260214_123316.json
(+563 files in other folders)
