[project]
name = "krai-engine"
version = "2.0.0"
description = "KRAI - Knowledge Retrieval and Intelligence Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "KRAI Team", email = "dev@krai.ai"}
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "YTT",   # flake8-2020
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "PLE",   # pylint errors
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "SIM108", # use ternary operator (readability)
    "C901",   # too complex (defer to pylint)
    "RUF012", # mutable class defaults: false-positive for Pydantic models (Field defaults)
    "RUF001", # ambiguous unicode in strings: intentional (German text, en-dash, info glyph)
    "RUF002", # ambiguous unicode in docstrings: intentional (German text)
    "RUF003", # ambiguous unicode in comments: intentional (German text)
    "E402",   # imports after code: intentional bootstrap (env loading / sys.path) precedes imports
    "N806",   # non-lowercase var in function: allowed (response models, math/df-style names)
    "N803",   # non-lowercase argument name: allowed
    "N999",   # invalid module name (e.g. main1.py): addressed via file cleanup, not lint
    "ASYNC109", # async fn with timeout param: deliberate API design in this codebase
    "SIM117", # nested with-statements: readability preference, deferred
    "SIM102", # nested if-statements: readability preference, deferred
    # --- Deferred quality debt (tracked separately): real but heavy to fix ---
    "F841",     # unused local variable: dead code, harmless; bulk cleanup deferred
    "RUF006",   # asyncio.create_task without stored ref: needs task-registry refactor
    "ASYNC230", # blocking open() in async: needs aiofiles migration
    "ASYNC221", # blocking subprocess in async: needs async subprocess migration
    "ASYNC210", # blocking HTTP in async: needs httpx/async client migration
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.ruff.lint.pep8-naming]
# Pydantic validators are classmethods that take `cls` — don't flag N805.
classmethod-decorators = ["classmethod", "validator", "field_validator", "root_validator", "model_validator", "pydantic.validator", "pydantic.field_validator", "pydantic.model_validator"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501", "S101", "B011"]
"legacy/*" = ["E501", "F401", "C901"]
# Optional-dependency probes: imports exist only to set *_AVAILABLE flags
"backend/optimizations/gpu_npu_optimization.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["backend"]

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "pandas.*",
    "PIL.*",
    "rich.*",
    "httpx.*",
    "asyncpg.*",
    "psycopg2.*",
    "python_multipart.*",
    "sklearn.*",
    "xgboost.*",
    "lightgbm.*",
]
ignore_missing_imports = true

[tool.bandit]
# All of these are pre-vetted false-positive patterns in this codebase. Reintroduce
# specific rules with `# nosec` per line if you want them re-enabled.
#   B608 — SQL f-strings that interpolate schema names sourced from config, not user input
#   B110 — defensive try/except/pass for optional teardown paths
#   B311 — random used for retry jitter and non-crypto sampling
#   B607/B603/B605/B404 — known subprocess calls (chcp, wmic, nvidia-smi); no user input
#   B104 — uvicorn dev server binds 0.0.0.0 inside Docker network
skips = ["B608", "B110", "B311", "B607", "B603", "B605", "B404", "B104", "B105", "B106", "B107", "B112"]
# B105/B106/B107 — "hardcoded password": false-positives on auth token-type/scheme
# identifiers ('access', 'refresh', 'bearer'), not credentials.
# B112 — try/except/continue: defensive skip in batch loops, same rationale as B110.

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["backend"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "smoke: Quick smoke tests",
    "slow: Tests that take longer than 10s",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "unit: Unit tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
